# FL_testbed

./: README.md  pyproject.toml
src/flwr/client/: app.py  client.py
src/flwr/client/grpc_client/: connection.py  message_handler.py
src/flwr/dataset/utils/: common.py
src/flwr/server/: app.py  client_manager.py  server.py
src/flwr/server/grpc_server/: flower_service_servicer.py  grpc_server.py
src/flwr/server/strategy/: default.py  fedavg.py
