[build-system]
requires = [
    "poetry==1.1.10",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flower"
version = "0.1.0"
description = "Flower for Independent Study"
license = "Apache-2.0"
authors = ["Xuliang Deng"]
readme = "README.md"
repository = "https://github.com/akirato0223/flower"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "flwr", from = "./src" },
]
exclude = [
    ".src/flwr/**/*_test.py",
]

[tool.poetry.dependencies]
python = "^3.6.2"
# Mandatory dependencies
numpy = "^1.19.0"
grpcio = "^1.27.2"
google = "^2.0.3"
protobuf = "^3.12.1"
dataclasses = { version = "==0.6", markers = "python_version < '3.7'"  }
# Optional dependencies
tensorflow-cpu = { version = "==2.6.0", optional = true }
torch = { version = "^1.9.0", optional = true }
torchvision = { version = "^0.10.0", optional = true }
boto3 = { version = "^1.12.36", optional = true }
boto3_type_annotations = { version = "^0.3.1", optional = true }
paramiko = { version = "^2.7.1", optional = true }
docker = { version = "^4.2.0", optional = true }
matplotlib = { version = "^3.2.1", optional = true }
tqdm = { version = "^4.48.2", optional = true }
ray = { extras = ["default"], version = "==1.6.0", optional = true }

[tool.poetry.extras]
simulation = ["ray"]
baseline = ["tensorflow-cpu", "boto3", "boto3_type_annotations", "paramiko", "docker", "matplotlib"]
examples-pytorch = ["torch", "torchvision", "tqdm"]
examples-tensorflow = ["tensorflow-cpu"]
http-logger = ["boto3", "boto3_type_annotations", "tensorflow-cpu", "boto3", "boto3_type_annotations", "paramiko", "docker", "matplotlib"]
ops = ["boto3", "boto3_type_annotations", "paramiko", "docker"]

[tool.poetry.dev-dependencies]
types-protobuf = "^3.17.4"
types-setuptools = "^57.0.2"
types-dataclasses = "^0.1.7"
isort = "==5.9.2"
black = "==21.7b0"
docformatter = "==1.4"
mypy = "==0.910"
pylint = "==2.8.2"
flake8 = "==3.9.2"
pytest = "==6.2.4"
pytest-watch = "==4.2.0"
grpcio-tools = "==1.32.0"
mypy-protobuf = "==2.4"
rope = "==0.19.0"
sphinx = "==3.5.4"
sphinx-book-theme = "==0.1.3"

[tool.isort]
line_length = 88
indent = "    "
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["flower"]

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]

[tool.pylint."MESSAGES CONTROL"]
disable = "bad-continuation,duplicate-code,too-few-public-methods,useless-import-alias"

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "flwr_example.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "flwr_experimental.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

